--- a/main template/index.html
+++ b/main template/index.html
@@ -25,16 +25,16 @@
 
     <!-- STYLES -->
     <link rel="stylesheet" type="text/css" media="print" href="css/print.css">
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/normalize/2.1.3/normalize.css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="js/nprogress/nprogress.css">
-    <link rel="stylesheet" type="text/css" href="css/animate.css">
-    <link rel="stylesheet" type="text/css" href="css/fonts/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/fonts/fontello/css/fontello.css">
-    <link rel="stylesheet" type="text/css" href="css/jquery.fancybox-1.3.4.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.css">
     <link rel="stylesheet" type="text/css" href="js/google-code-prettify/prettify.css">
     <link rel="stylesheet" type="text/css" href="css/uniform.default.css">
-    <link rel="stylesheet" type="text/css" href="css/flexslider.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.1/flexslider.css">
     <link rel="stylesheet" type="text/css" href="js/mediaelement/mediaelementplayer.css">
     <link rel="stylesheet" type="text/css" href="css/tooltipster.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
