--- a/main template/index.html
+++ b/main template/index.html
@@ -85,17 +85,14 @@
                             <!-- intro -->
                             <div class="intro">
                                 <h2>
-                                    Hello. I am
+                                    Hola. Soy
                                     <span class="rotate-words">
-                                        <span>an illustrator.</span>
-                                        <span>a writer.</span>
-                                        <span>a freelancer.</span>
-                                        <span>an inventor.</span>
-                                        <span>a wordpress fan.</span>
-                                        <span>a coffee lover.</span>
+                                        <span>ingeniero.</span>
+                                        <span>escritor.</span>
+                                        <span>deportista.</span>
                                     </span>
-                                    <br> I live in a small town somewhere in the world.
-                                    <br> I am passionated about <strong>minimalistic</strong> and flat design.
+                                    <br> Vivo en un pueblo al sur de Madrid.
+                                    <br> Soy un apasionado del <strong>Data Science</strong> y del deporte.
                                 </h2>
                             </div>
                             <!-- intro -->
@@ -144,164 +141,105 @@
                     <h2 class="section-title"><span><i class="icon-layers-alt"></i>¿CÓMO ME GUSTA TRABAJAR?</span></h2>
                     <!-- PROCESS -->
                     <div class="row">
-                        <div class="col-xs-6 col-sm-4 col-md-2">
-                            <!-- process -->
+                        <div class="col-xs-6 col-sm-4 col-md-4">
                             <div class="process">
                                 <div class="process-box">
                                     <i class="icon-lamp"></i>
                                     <h4>IDEA</h4>
                                 </div>
                             </div>
-                            <!-- process -->
                         </div>
-                        <div class="col-xs-6 col-sm-4 col-md-2">
-                            <!-- process -->
+                        <div class="col-xs-6 col-sm-4 col-md-4">
                             <div class="process">
                                 <div class="process-box">
                                     <i class="fa fa-puzzle-piece"></i>
                                     <h4>CONCEPTO</h4>
                                 </div>
                             </div>
-                            <!-- process -->
                         </div>
-                        <div class="col-xs-6 col-sm-4 col-md-2">
-                            <!-- process -->
+                        <div class="col-xs-6 col-sm-4 col-md-4">
                             <div class="process">
                                 <div class="process-box">
-                                    <i class="icon-brush"></i>
-                                    <h4>DISEÑO</h4>
+                                    <i class="fa fa-repeat"></i>
+                                    <h4>SCRUM<br>Met. ágil</h4>
                                 </div>
                             </div>
-                            <!-- process -->
-                        </div>
-                        <div class="col-xs-6 col-sm-4 col-md-2">
-                            <!-- process -->
-                            <div class="process">
-                                <div class="process-box">
-                                    <i class="fa fa-cube"></i>
-                                    <h4>DESARROLLO</h4>
-                                </div>
-                            </div>
-                            <!-- process -->
-                        </div>
-                        <div class="col-xs-6 col-sm-4 col-md-2">
-                            <!-- process -->
-                            <div class="process">
-                                <div class="process-box">
-                                    <i class="fa fa-bug"></i>
-                                    <h4>TESTING</h4>
-                                </div>
-                            </div>
-                            <!-- process -->
-                        </div>
-                        <div class="col-xs-6 col-sm-4 col-md-2">
-                            <!-- process -->
-                            <div class="process">
-                                <div class="process-box">
-                                    <i class="fa fa-rocket"></i>
-                                    <h4>PRODUCCIÓN</h4>
-                                </div>
-                            </div>
-                            <!-- process -->
                         </div>
                     </div>
                     <!-- PROCESS -->
+                    <!--
                     <h2 class="section-title"><span>FUN FACT</span></h2>
-                    <!-- FUN FACT -->
                     <div class="row">
                         <div class="col-sm-6 col-md-3">
-                            <!-- fun-fact -->
                             <div class="fun-fact">
                                 <i class="icon-instagram-1"></i>
                                 <h4>24000 SHOTS CAPTURED</h4>
                             </div>
-                            <!-- fun-fact -->
                         </div>
                         <div class="col-sm-6 col-md-3">
-                            <!-- fun-fact -->
                             <div class="fun-fact">
                                 <i class="icon-jabber"></i>
                                 <h4>37 PROJECTS COMPLETED</h4>
                             </div>
-                            <!-- fun-fact -->
                         </div>
                         <div class="col-sm-6 col-md-3">
-                            <!-- fun-fact -->
                             <div class="fun-fact">
                                 <i class="icon-child"></i>
                                 <h4>87 SATISFIED CUSTOMERS</h4>
                             </div>
-                            <!-- fun-fact -->
                         </div>
                         <div class="col-sm-6 col-md-3">
-                            <!-- fun-fact -->
                             <div class="fun-fact">
                                 <i class="icon-bicycle"></i>
                                 <h4>1450 KM CYCLED</h4>
                             </div>
-                            <!-- fun-fact -->
                         </div>
                     </div>
-                    <!-- FUN FACT -->
                     <h2 class="section-title"><span>CLIENTS</span></h2>
-                    <!-- CLIENTS -->
                     <div class="row">
                         <div class="col-xs-6 col-sm-4 col-md-2">
-                            <!-- client -->
                             <div class="client">
                                 <a href="#">
                                     <img src="images/clients/client-01.png" alt="client">
                                 </a>
                             </div>
-                            <!-- client -->
                         </div>
                         <div class="col-xs-6 col-sm-4 col-md-2">
-                            <!-- client -->
                             <div class="client">
                                 <a href="#">
                                     <img src="images/clients/client-02.png" alt="client">
                                 </a>
                             </div>
-                            <!-- client -->
                         </div>
                         <div class="col-xs-6 col-sm-4 col-md-2">
-                            <!-- client -->
                             <div class="client">
                                 <a href="#">
                                     <img src="images/clients/client-03.png" alt="client">
                                 </a>
                             </div>
-                            <!-- client -->
                         </div>
                         <div class="col-xs-6 col-sm-4 col-md-2">
-                            <!-- client -->
                             <div class="client">
                                 <a href="#">
                                     <img src="images/clients/client-04.png" alt="client">
                                 </a>
                             </div>
-                            <!-- client -->
                         </div>
                         <div class="col-xs-6 col-sm-4 col-md-2">
-                            <!-- client -->
                             <div class="client">
                                 <a href="#">
                                     <img src="images/clients/client-05.png" alt="client">
                                 </a>
                             </div>
-                            <!-- client -->
                         </div>
                         <div class="col-xs-6 col-sm-4 col-md-2">
-                            <!-- client -->
                             <div class="client">
                                 <a href="#">
                                     <img src="images/clients/client-06.png" alt="client">
                                 </a>
                             </div>
-                            <!-- client -->
                         </div>
                     </div>
-                    <!-- CLIENTS -->
                     <h2 class="section-title"><span>OTHER PAGES</span></h2>
                     <p>
                         <a class="button" href="404.html">404</a>
@@ -312,6 +250,7 @@
                         <a class="button" href="shortcodes.html">Shortcodes</a>
                         <a class="button" href="typography.html">Typography</a>
                     </p>
+                    -->
                 </div>
             </section>
             <!-- PAGE : ABOUT -->
