--- a/main template/index.html
+++ b/main template/index.html
@@ -49,14 +49,12 @@
 
 </head>
 
-
-
 <body>
     <div class="container" id="container">
         <header class="header">
             <img src="images/site/avatar.png" alt="avatar">
             <h1>Carlos Vázquez Losada</h1>
-            <p>freelance graphic designer</p>
+            <p>software engineer</p>
             <ul class="vs-nav">
                 <!-- InstanceBeginEditable name="Menu-Content" -->
                 <li><a href="#/about">sobre mí</a></li>
@@ -81,7 +79,7 @@
                     <div class="row">
                         <!-- column 8/12 -->
                         <div class="col-md-8">
-                            <h2 class="section-title"><span><i class="icon-guest"></i>A LITTLE ABOUT ME</span></h2>
+                            <h2 class="section-title"><span><i class="icon-guest"></i>UN POCO SOBRE MI</span></h2>
                             <!-- intro -->
                             <div class="intro">
                                 <h2>
@@ -835,4 +833,5 @@
     <!--************************** STYLE SWITCHER -->
 </body>
 <!-- InstanceEnd -->
+
 </html>
