--- a/main template/index.html
+++ b/main template/index.html
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" href="images/ico/favicon.ico">
     <link rel="apple-touch-icon" href="images/ico/apple-touch-icon.png" />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
+    <script src="js/modernizr.custom.js"></script>
 
     <!-- FONTS -->
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
@@ -26,7 +26,7 @@
     <!-- STYLES -->
     <link rel="stylesheet" type="text/css" media="print" href="css/print.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/normalize/2.1.3/normalize.css">
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="js/nprogress/nprogress.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.1/css/font-awesome.min.css">
@@ -830,7 +830,6 @@
     <script src="js/classie.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
     <script src="js/main.js"></script>
-    <!--************************** STYLE SWITCHER -->
 </body>
 <!-- InstanceEnd -->
 
