Little fix in contact page.

--- a/main template/index.html
+++ b/main template/index.html
@@ -475,7 +475,7 @@
                         <div class="col-md-6">
                             <h2 class="section-title"><span><i class="icon-chat"></i>LET'S SOCIALIZE</span></h2>
                             <!-- SOCIAL -->
-                            <ul class="social">
+                            <ul class="social" style="text-align: center">
                                 <li>
                                     <a class="facebook" href="https://www.facebook.com/profile.php?id=100005939719228" target="_blank"></a>
                                 </li>
