Deleted unused page from index.

--- a/main template/index.html
+++ b/main template/index.html
@@ -61,7 +61,7 @@
                 <li><a href="#/portfolio">portfolio</a></li>
                 <li><a href="#/contact">contacto</a></li>
                 <li><a href="#/blog">blog</a></li>
-                <li><a href="#/resume">resumen</a></li>
+                <!--<li><a href="#/resume">resumen</a></li>-->
             </ul>
             <div class="header-search">
                 <form role="search" method="get" id="search-form" action="#">
@@ -440,14 +440,11 @@
             </section>
             <!-- PAGE : BLOG -->
             <!-- PAGE : RESUME -->
+            <!--
             <section id="resume" class="page">
                 <div class="content">
-                    <!-- CONTENT -->
-                    <!-- row -->
                     <div class="row">
-                        <!-- col 6/12 -->
                         <div class="col-md-6">
-                            <!-- timeline -->
                             <div class="timeline">
                                 <h2><i class="fa fa-flask"></i>HISTORIAL LABORAL</h2>
                                 <div class="event">
@@ -457,8 +454,6 @@
                                     <p>Desde 2015, Binary Lab fue una agencia de desarrollo web íntegro, diseño gráfico y branding empresarial. Fui fundador durante dos años, cosechando experiencia liderando mi propio equipo de desarrolladores y diseñadores y numerosos proyectos. Actualmente me encuentro desligado de la misma.</p>
                                 </div>
                             </div>
-                            <!-- timeline -->
-                            <!-- timeline -->
                             <div class="timeline">
                                 <h2><i class="icon-college"></i>HISTORIAL ACADÉMICO</h2>
                                 <div class="event current">
@@ -467,34 +462,24 @@
                                     <h5>Universidad Rey Juan Carlos</h5>
                                 </div>
                             </div>
-                            <!-- timeline -->
                         </div>
-                        <!-- col 6/12 -->
-                        <!-- col 6/12 -->
                         <div class="col-md-6">
                             <h2 class="section-title"><span><i class="icon-cog-1"></i>HABILIDAD POR LENGUAJE</span></h2>
-                            <!-- DEV SKILLS -->
                             <div class="skillset">
-                                <!-- .skill-unit -->
                                 <div class="skill-unit">
                                     <h4>Java</h4>
                                     <div class="bar" data-percent="90">
                                         <div class="progress"></div>
                                     </div>
                                 </div>
-                                <!-- .skill-unit -->
-                                <!-- .skill-unit -->
                                 <div class="skill-unit">
                                     <h4>Python</h4>
                                     <div class="bar" data-percent="30">
                                         <div class="progress"></div>
                                     </div>
                                 </div>
-                                <!-- .skill-unit -->
                             </div>
-                            <!-- DEV SKILLS -->
                             <h2 class="section-title"><span><i class="icon-brush"></i>HABILIDAD POR TECNOLOGÍA</span></h2>
-                            <!-- DESIGN SKILLS -->
                             <div class="skillset">
                                 <div class="skill-unit">
                                     <h4>Backend</h4>
@@ -514,10 +499,7 @@
                                         <div class="progress"></div>
                                     </div>
                                 </div>
-                                <!-- .skill-unit -->
                             </div>
-                            <!-- DESIGN SKILLS -->
-                            <!--
                             <h2 class="section-title"><span><i class="icon-comment"></i>TESTIMONIALS</span></h2>
                             <div class="testo-group">
                                 <div class="testo">
@@ -536,28 +518,19 @@
                                     <p>He is ok.</p>
                                 </div>
                             </div>
-                            -->
-                            <!-- testo-group -->
                             <h2 class="section-title"><span><i class="icon-doc-alt"></i>DESCARGA MI CV</span></h2>
                             <p>Puedes descargar mi CV en formato PDF si quieres. Soy un apasionado del Data Science, desarrollo web y los algoritmos.</p>
-                            <!-- DOWNLOAD BUTTON -->
                             <div class="download-button">
                                 <a href="#" class="button primary">DESCARGAR CV</a>
                             </div>
-                            <!-- DOWNLOAD BUTTON -->
                             <h2 class="section-title"><span><i class="icon-linkedin"></i>VISITA MI PERFIL EN LINKEDIN</span></h2>
                             <p>Puedes visitarme en LinkedIn. Tener la posibilidad de ampliar mi red de contactos siempre es una buena oportunidad para conocer a gente nueva.</p>
-                            <!-- DOWNLOAD BUTTON -->
                             <div class="download-button">
                                 <a href="https://www.linkedin.com/in/carlos-vazquez-losada/" class="button primary" target="_blank">MI LINKEDIN</a>
                             </div>
-                            <!-- DOWNLOAD BUTTON -->
                         </div>
-                        <!-- col 6/12 -->
                     </div>
-                    <!-- row -->
                 </div>
-                <!-- CONTENT -->
             </section>
             <!-- PAGE : RESUME -->
             <!-- InstanceEndEditable -->
