Minor changes on template. Ready to backend dev.

--- a/main template/index.html
+++ b/main template/index.html
@@ -103,7 +103,7 @@
                         <!-- column 4/12 -->
                     </div>
                     <!-- row -->
-                    <h2 class="section-title"><span><i class="fa fa-magic"></i>MI CAMPO DE ESTUDIO</span></h2>
+                    <h2 class="section-title"><span><i class="fa fa-magic"></i>MI PASIÓN</span></h2>
                     <!-- SERVICES -->
                     <div class="row">
                         <div class="col-sm-6 col-md-4">
